hphp/hack/test/typecheck/new_inference/typehole/lambda_tyvar.php.constraint_method_call.exp
ERROR: File "lambda_tyvar.php", line 7, characters 35-60:
No instance method `this_method_does_not_exist` in `string` (Typing[4053])
  File "lambda_tyvar.php", line 9, characters 7-16:
  This is why I think it is an object of type HH\string
  File "string.hhi", line 6, characters 15-20:
  Declaration of `string` is here
